feat: add information to schemas
