# storage/api-docs/api-docs.json
@@ -106,6 +106,16 @@
                     "description": {
                         "description": "Description of the Star",
                         "type": "string"
+                    },
+                    "created_at": {
+                        "description": "Timestamp of user creation",
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "updated_at": {
+                        "description": "Timestamp of last update",
+                        "type": "string",
+                        "format": "date-time"
                     }
                 },
                 "type": "object"
